--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -7,7 +7,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Compile
         run: |
+          echo "::add-matcher::gcc_matcher.json"
+          echo "::group::gcc"
           gcc -o hello_word hello_world.c
+          echo "::endgroup::"
       - name: Test
         run: |
           ./hello_word > output.txt
